@@ -105,6 +105,7 @@ public class TestFairScheduler extends TestCase {
     int reduces = 0;
     int maxMapTasksPerTracker = 2;
     int maxReduceTasksPerTracker = 2;
+    long ttExpiryInterval = 10 * 60 * 1000L; // default interval
     List<JobInProgressListener> listeners =
       new ArrayList<JobInProgressListener>();
     
@@ -125,7 +126,9 @@ public class TestFairScheduler extends TestCase {
     @Override
     public ClusterStatus getClusterStatus() {
       int numTrackers = trackers.size();
-      return new ClusterStatus(numTrackers, maps, reduces,
+
+      return new ClusterStatus(numTrackers, 0,
+          ttExpiryInterval, maps, reduces,
           numTrackers * maxMapTasksPerTracker,
           numTrackers * maxReduceTasksPerTracker,
           JobTracker.State.RUNNING);
